Verify artifacts in ingestor
